@@ -65,4 +65,5 @@
    3-Jul-2023  - V0.73 imgt.org no longer supports http
   18-Jul-2023  - V0.74 Update baseVersion for ChEMBL
   19-Sep-2023  - V0.75 Update testCache and reload methods for target providers;
-                       Make testCARDTargetOntologyProvider stashable
+                       Make CARDTargetOntologyProvider stashable;
+                       Add try/except for chembl_webresource_client.new_client imports in ChEMBL providers in case of service downtime
